Issue #3468621: Color contrast of Views "hidden" fields

--- a/styles/base/_views.scss
+++ b/styles/base/_views.scss
@@ -153,6 +153,10 @@
 .views-live-preview {
   padding: 0;
 
+  .section-title {
+    color: var(--gin-color-text);
+  }
+
   .gin-layer-wrapper {
     border-color: var(--gin-border-color);
   }
